--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -1,67 +1,22 @@
 @use './../../helpers/functions' as *;
 
-.Intro {
-    >svg {
-        width: 30px;
-        height: 30px;
-        background-color: $BaseColor;
-        color: white;
-        border-radius: 50%;
-        padding: 5px;
-        display: none;
-        z-index: 3;
-
-        @include Breakpoints(medium) {
-            display: block;
-        }
-
-        @include Breakpoints(small) {
-            display: block;
-        }
-
-        @include Breakpoints(mobile) {
-            display: inline;
-        }
-    }
-
-
-
-    .Intro_Search {
-        position: relative;
-        width: 350px;
-
-        @include Breakpoints(mobile) {
-            width: 70%;
-        }
-
-        svg {
-            position: absolute;
-            color: $BaseColor;
-            right: 7px;
-            top: 7px;
-            cursor: pointer;
-        }
-
-        input[type="text"] {
-            height: 30px;
-
-            &:focus {
-                border-color: $SecondColor;
-                box-shadow: 0 0 5px 2px $SecondColor;
-            }
-        }
-    }
-
-
-}
-
-
 .Intro_Text {
-    border: solid black 1px;
-    width: 95%;
-    height: 300px;
+    height: max-content;
     margin: auto;
     border-radius: 20px;
+    background-image: url('../../Assets/Images/hero\ card.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+
+    img {
+        width: 300px;
+
+        @include Breakpoints(mobile) {
+            width: 90%;
+        }
+    }
 
     @include Breakpoints(mobile) {
         height: max-content;
@@ -72,7 +27,6 @@
         p {
             margin: 0;
             font-size: 20px;
-            width: 70%;
 
             @include Breakpoints(medium) {
                 width: 90%;
@@ -92,11 +46,10 @@
 .Intro_Apps {
     height: max-content;
     --bs-gutter-x: 0;
-    margin: auto !important;
+    margin: 20px auto !important;
 
     h1 {
-        color: $BaseColor;
-        width: max-content;
+        @include Title();
     }
 
     .Intro_Apps_inside {
@@ -110,13 +63,11 @@
 
 .Intro_Categories {
     --bs-gutter-x: 0;
-    // margin-left: 0 !important;
     height: max-content;
     margin: auto !important;
 
     h1 {
-        color: $BaseColor;
-        width: max-content;
+        @include Title();
     }
 
     .Intro_Categories_inside {
