--- a/src/components/SideNav/SideNav.scss
+++ b/src/components/SideNav/SideNav.scss
@@ -1,5 +1,31 @@
 @use './../../helpers/functions' as *;
 
+.SideButton {
+    width: 30px;
+    height: 30px;
+    background-color: $BaseColor;
+    color: white;
+    border-radius: 50%;
+    padding: 5px;
+    display: none;
+    z-index: 3;
+    position: fixed;
+    right: 20px;
+    top: 10px;
+
+    @include Breakpoints(medium) {
+        display: block;
+    }
+
+    @include Breakpoints(small) {
+        display: block;
+    }
+
+    @include Breakpoints(mobile) {
+        display: inline;
+    }
+}
+
 .dropBox {
     position: fixed;
     width: 100%;
@@ -17,6 +43,7 @@
         visibility: hidden;
         opacity: 0;
     }
+
 }
 
 nav {
