--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -1,24 +1,24 @@
-@use './../../helpers/functions' as *;
+@use "./../../helpers/functions" as *;
 
 .category {
-    width: calc(100%/9);
+    width: calc(100% / 12);
     padding: 5px;
     background-color: white;
     border-radius: 5px;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-right: 10px;
 
     @include Breakpoints(medium) {
-        width: 20%;
+        width: 10%;
     }
 
     @include Breakpoints(small) {
-        width: 40%;
-        margin: 10px auto;
+        width: 20%;
+        margin: 10px;
     }
 
     @include Breakpoints(mobile) {
-        width: 40%;
-        margin: 10px auto;
+        width: 20%;
+        margin: 10px;
     }
 }
