--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -1,4 +1,8 @@
 @use './../../helpers/functions' as *;
+.con{
+   margin-top: 50px;                            
+   padding: 0 100px 0 100px;
+}
 
 .Intro_Text {
     height: max-content;
