--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -11,11 +11,11 @@
 
     @include Breakpoints(medium) {
         width: 30% !important;
-        margin: auto;
+        margin: 15px auto;
     }
 
     @include Breakpoints(small) {
-        margin: auto;
+        margin: 15px auto;
         width: 40% !important;
     }
 
