--- a/src/components/Filtering/Filters.scss
+++ b/src/components/Filtering/Filters.scss
@@ -155,7 +155,18 @@
 
 .FilteredApps {
     --bs-gutter-x: 0 !important;
-    margin: auto !important;
+
+    // @include Breakpoints(medium) {
+    //     margin: auto !important;
+    // }
+
+    // @include Breakpoints(small) {
+    //     margin: auto !important;
+    // }
+
+    // @include Breakpoints(mobile) {
+    //     margin: auto !important;
+    // }
 
     h1 {
         color: $BaseColor;
