--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,27 +1,70 @@
 @use "../../helpers/functions" as *;
 
-.Intro_Search {
-    position: relative;
-    width: 350px;
+.DropBox {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(48 162 123 / 36%);
+    z-index: 3;
+    @include Animtation(0.5s, linear, all);
+    visibility: hidden;
+    opacity: 0;
 
-    @include Breakpoints(mobile) {
-        width: 70%;
+
+    &.Showing {
+        visibility: visible;
+        opacity: 1;
     }
+}
 
-    svg {
-        position: absolute;
-        color: $BaseColor;
-        right: 7px;
-        top: 7px;
-        cursor: pointer;
-    }
-
-    input[type="text"] {
+.Intro {
+    >svg {
+        background-color: $BaseColor;
+        color: white;
+        width: 30px;
         height: 30px;
+        border-radius: 50%;
+        padding: 5px;
+        cursor: pointer;
+        display: none;
+        z-index: 4;
 
-        &:focus {
-            border-color: $BaseColor;
-            box-shadow: 0 0 5px 2px $BaseColor;
+        @include Breakpoints(medium) {
+            display: block;
+        }
+
+        @include Breakpoints(small) {
+            display: block;
+        }
+
+        @include Breakpoints(mobile) {
+            display: block;
+        }
+    }
+
+    .Intro_Search {
+        position: relative;
+        width: 350px;
+
+        @include Breakpoints(mobile) {
+            width: 70%;
+        }
+
+        svg {
+            position: absolute;
+            color: $BaseColor;
+            right: 7px;
+            top: 7px;
+            cursor: pointer;
+        }
+
+        input[type="text"] {
+            height: 30px;
+
+            &:focus {
+                border-color: $BaseColor;
+                box-shadow: 0 0 5px 2px $BaseColor;
+            }
         }
     }
 }
