--- a/src/pages/Admin/Login/Login.scss
+++ b/src/pages/Admin/Login/Login.scss
@@ -1,5 +1,43 @@
-@use '../../../helpers/functions' as *;
+@use "../../../helpers/functions" as *;
 
 .Login {
-    margin-left: 250px;
+    background-color: #d1e8df;
+    @include Animtation(0.4s, linear, all);
+    padding: 1px;
+
+    &.LoginMarined {
+        margin-left: 250px;
+
+        @include Breakpoints(medium) {
+            margin-left: 0;
+        }
+
+        @include Breakpoints(small) {
+            margin-left: 0;
+        }
+
+        @include Breakpoints(mobile) {
+            margin-left: 0;
+        }
+    }
+
+    &.LoginConstant {
+        margin-left: 90px;
+
+        @include Breakpoints(medium) {
+            margin-left: 0;
+        }
+
+        @include Breakpoints(small) {
+            margin-left: 0;
+        }
+
+        @include Breakpoints(mobile) {
+            margin-left: 0;
+        }
+    }
+    .login-main {
+        width: 40%;
+        margin: 100px auto;
+    }
 }
