--- a/src/pages/Contactus/Contact.scss
+++ b/src/pages/Contactus/Contact.scss
@@ -3,6 +3,39 @@
 .ContactUs {
     margin-left: 250px;
     background-color: #d1e8df;
+    @include Animtation(0.4s, linear, all);
+
+    &.ContactMarined {
+        margin-left: 250px;
+
+        @include Breakpoints(medium) {
+            margin-left: 0;
+        }
+
+        @include Breakpoints(small) {
+            margin-left: 0;
+        }
+
+        @include Breakpoints(mobile) {
+            margin-left: 0;
+        }
+    }
+
+    &.ContactConstant {
+        margin-left: 90px;
+
+        @include Breakpoints(medium) {
+            margin-left: 0;
+        }
+
+        @include Breakpoints(small) {
+            margin-left: 0;
+        }
+
+        @include Breakpoints(mobile) {
+            margin-left: 0;
+        }
+    }
 
     /* Center content vertically */
     @include Breakpoints(medium) {
