--- a/src/pages/Productsinfo/productsinfo.scss
+++ b/src/pages/Productsinfo/productsinfo.scss
@@ -1,4 +1,5 @@
 @use "../../helpers/functions" as *;
+
 .prod-info {
     background-color: #d1e8df;
     @include Animtation(0.4s, linear, all);
@@ -47,20 +48,43 @@
     @include Breakpoints(mobile) {
         margin: 0;
     }
+
     .prod-main-con {
+        @include Breakpoints(mobile) {
+            padding: 0 20px !important;
+        }
+
+        .Main_height {
+            height: 350px;
+
+
+
+            @include Breakpoints(small) {
+                height: max-content;
+            }
+
+            @include Breakpoints(mobile) {
+                height: max-content;
+            }
+        }
+
         a {
             text-decoration: none;
             color: rgba($BaseColor, 0.6);
             font-family: CairoMeduim;
         }
+
         .link-style {
             color: $BaseColor;
         }
+
         .app-icon {
             width: 120px;
         }
+
         .app-link {
             gap: 20px;
+
             .share-link {
                 background-color: $BaseColor;
                 color: white;
@@ -71,6 +95,7 @@
                 text-align: center;
                 border-radius: 7px 7px;
             }
+
             .google-play {
                 background-color: black;
                 width: 134px;
@@ -78,21 +103,25 @@
                 padding: 1px;
                 border-radius: 20px/100px;
                 display: flex;
+
                 span {
                     display: block;
                     line-height: 18px;
                     color: white;
                 }
+
                 img {
                     width: 40px;
                 }
             }
         }
+
         .app-slider {
             background-color: white;
             border-radius: 10px;
             padding: 20px;
         }
+
         .new {
             @extend .app-slider;
 
