--- a/src/helpers/_functions.scss
+++ b/src/helpers/_functions.scss
@@ -28,8 +28,7 @@ $SecondColor: #d1e8df;
 
 @mixin Title() {
     color: $BaseColor;
-    width: max-content;
-    margin: 0;
+    margin:0px 20px;
 }
 .title {
     @include Title();
