--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -59,11 +59,11 @@
             width: 70%;
         }
 
-        >svg {
+        >label {
             position: absolute;
             color: $BaseColor;
             right: 7px;
-            top: 7px;
+            top: 1px;
             cursor: pointer;
         }
 
