--- a/src/components/SideNav/SideNav.scss
+++ b/src/components/SideNav/SideNav.scss
@@ -72,7 +72,7 @@ aside {
         width: 100%;
 
         .Active {
-            background-color: #d1e8df;
+            background-color: #d1e8e0;
 
             svg {
                 background-color: $BaseColor;
@@ -90,7 +90,7 @@ aside {
                     margin-top: 20px;
 
                     &.Active {
-                        background-color: #d1e8df;
+                        background-color: #d1e8e0;
 
                         svg {
                             background-color: $BaseColor;
