--- a/src/pages/Contactus/Contact.scss
+++ b/src/pages/Contactus/Contact.scss
@@ -142,3 +142,11 @@
 
     }
 }
+
+.form-select{
+  appearance: none;
+  background-image: url("./../../Assets/Images/angle-down-solid.svg");
+  background-repeat: no-repeat;
+  background-position: right 0.7rem top 50%;
+  background-size: 0.65rem auto;    
+}   
