--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -9,8 +9,8 @@
 
     img {
         margin-left: 5px;
-        // width: 160px;
-        height: 290px;
+        width: 175px;
+        height: 320px;
         background-color: $BaseColor;
         border-radius: 10px;
     }
